Feat: [EVER-111] 유저 구독 조합 엔티티 추가